--- a/www/score.html
+++ b/www/score.html
@@ -2,6 +2,6 @@
     <h1 id="score">結果表示</h1>
     <h2 id="text"></h2>
     <div>
-        <ons-button modifier="large" id="btn_return">最初に戻る</ons-button>
+        <ons-button style="width:80%" id="btn_return">最初に戻る</ons-button>
     </div>
 </ons-page>
